# ChangeLog for dev-php/PEAR-Net_LDAP2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_LDAP2/ChangeLog,v 1.3 2009/03/07 05:52:49 darkside Exp $

*PEAR-Net_LDAP2-2.0.0_rc5 (07 Mar 2009)

  07 Mar 2009; Jeremy Olexa <darkside@gentoo.org>
  +PEAR-Net_LDAP2-2.0.0_rc5.ebuild:
  (non maintainer commit) simple rename version bump, bug 259206

*PEAR-Net_LDAP2-2.0.0_rc2 (20 Mar 2008)

  20 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -PEAR-Net_LDAP2-2.0.0_rc1.ebuild, +PEAR-Net_LDAP2-2.0.0_rc2.ebuild:
  0-Day Version bump

*PEAR-Net_LDAP2-2.0.0_rc1 (19 Mar 2008)

  19 Mar 2008; <jokey@gentoo.org> +PEAR-Net_LDAP2-2.0.0_rc1.ebuild:
  Initial import from project overlay

  19 Mar 2008; Jakub Moc <jakub@gentoo.org>
  +PEAR-Net_LDAP2-2.0.0_rc1.ebuild:
  New ebuild. Keeping KEYWORDS from dev-php/PEAR-Net_LDAP since this is
  really just a version bump of that package with dropped PHP4
  compatibility.
